Fix overflow issues

--- a/packages/client/css/specific/sidebar.css
+++ b/packages/client/css/specific/sidebar.css
@@ -54,6 +54,8 @@
   font-size: 16px;
   text-decoration: none;
 
+  overflow-x: hidden;
+
   cursor: pointer;
   border-radius: 4px;
 
